# seg_tgce

./: .gitignore  .readthedocs.yaml  README.md  package-lock.json  requirements.txt
.github/workflows/: python-ci.yml
core/: .pylintrc  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
core/seg_tgce/data/: utils.py
core/seg_tgce/data/crowd_seg/: __main__.py  generator.py  map.py  metrics.py  tfds_builder.py  visualizer.py
core/seg_tgce/data/crowd_seg/metadata/: train_data.json  train_inverted.json
core/seg_tgce/data/oxford_pet/: oxford_pet.py
core/seg_tgce/data/oxford_pet/disturbance/: model.py
core/seg_tgce/experiments/: utils.py
core/seg_tgce/experiments/apr_14_2024/: experiment.py
core/seg_tgce/experiments/histology/: features.py  scalar.py
core/seg_tgce/experiments/pets/: scalar.py
core/seg_tgce/loss/: tgce.py
core/seg_tgce/models/: unet.py
core/seg_tgce/run/oxford_ma_runner/: model_result.py  runner.py
core/src/: requirements.txt
core/src/data/: utils.py
core/src/data/disturbance/: model.py
core/src/data/mnist/: array_overlay.py  bounding_box.py  mnist.py  semantic_segmentation.py  train.py
core/src/data/oxford_pet/: oxford_pet.py
core/src/data/oxford_pet/disturbance/: model.py
core/src/experiments/apr_14_2024/: experiment.py
core/src/loss/: tgce.py
core/src/metrics/: dice_coefficient.py
core/src/models/: ma_model.py  unet.py
core/src/run/: runner.py
core/src/run/oxford_ma_runner/: plotting.py  runner.py
core/tests/data/: test_disturbance.py  test_oxford_pet.py
core/tests/data/crowd_seg/: test_map.py
docs/: pyproject.toml  requirements.txt
docs/source/: conf.py  contribution.rst  experiments.rst  index.rst  introduction.rst
docs/source/elements/: cnn.rst  loss.rst
notebooks/: [Gen_MA]_Tomato_seeds.ipynb  [Pre_train]_Tomato_Seeds_.ipynb  crowd-seg-pytorch-oxford-pets.ipynb  custom-keras-tuner-tgcess-unet-oxford-pets.ipynb  mv-oxford-pets.ipynb  oma-optuna.ipynb  oxford-pets-transform.ipynb  segmentation-tgce-ss-tensorial.ipynb  staple-oxford-pets.ipynb  tgcess-resunet-backbone-oxfordpets.ipynb
src/: requirements.txt
src/data/: oxford_pet.py  utils.py
src/data/disturbance/: model.py
src/data/oxford_pet/: oxford_pet.py
src/loss/: tgce.py
tests/data/: test_oxford_pet.py
