[project]
name = "seg_tgce"
version = "0.0.1"
authors = [{ name = "Brandon Lotero", email = "blotero@gmail.com" }]
description = "A package for the SEG TGCE project"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]

[project.urls]
Homepage = "https://github.com/blotero/seg_tgce"
Issues = "https://github.com/blotero/seg_tgce/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"
