[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Brandon Lotero <blotero@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.group.dev.dependencies]
rstcheck = "^6.2.1"
rstfmt = "^0.0.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
